# config/routes.rb
@@ -4,5 +4,5 @@ Rails.application.routes.draw do
   # For details on the DSL available within this file, see https://guides.rubyonrails.org/routing.html
   resources :responses, only: [:create, :index]
 
-  get '/averages', to: 'responses#averages'
+  get '/averages', to: 'analytics#averages'
 end
